--- a/mod01/ex00/Makefile
+++ b/mod01/ex00/Makefile
@@ -7,7 +7,8 @@ CPP=c++
 CPPFLAGS=-Wall -Werror -Wextra -std=c++98 -g3 -fsanitize=address
 INC=-I inc
 FILES = main \
-		Position
+		Position \
+		Statistic
 
 BIN_DIR=bin
 BIN=$(BIN_DIR)/$(NAME)
